--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,10 @@
 .navbar {
   width: 100%;
   height: 8vh;
-  background: #fff;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  position: relative;
+  border-bottom: 1px solid #ececec;
 }
 
 .title {
@@ -21,7 +20,7 @@
 
 .menuItem {
   font-family: 'Roboto', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 18px;
   letter-spacing: 0.02em;
 }
