--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 9.2vh;
   display: flex;
+  gap: 3vh;
   align-items: center;
   justify-content: space-evenly;
   border-bottom: 1px solid #ececec;
